0.15     2005-08-31
    - ti.dropframes_p = 0 so we do not loos half of the frames.
    - also increase keyframe interval for better search support.
    - this time the windows build als supports ac3 decoding again.

0.14     2005-08-15
    - add support for v4l input devices
    - update to latest version of ffmpeg-cvs(now uses pkg-config)
    - --audiostream id, new option to select an audio stream if 
      input has more than one audio stream
    - fixed ogg muxer

0.13     2005-03-12
    - add new command line options, starttime, endtime, sharpness, keyint
    - fix compile issues with new version of faad
    - better support for stdout on win32,
       to allow ezstream streaming non-theora source types
    - deinterlace only input marked as interlaced by default
    - handle input files with frame sizes that are not a multiple of 16
    - document --channels to resample audio to i.e. 1 channel

0.12     2004-11-18
    - add more command line options, for bitrate modes, metadata
    - update kino plugin

0.11     2004-09-04
    - changed default, then called without parameters to -p preview mode
    - changed PREVIEW(PAL) settings to 384x288 to make pixel aspect ratio 1:1
    - performance improvement if compiled with theora-mmx 
      [http://svn.xiph.org/branches/theora-mmx]
    - new option: --aspect to define frame aspect ratio: i.e. 4:3 or 16:9

0.10.2     2004-07-17
    - add cropping support
    - remove support for ffmpeg<0.4.9-pre1
    - change configure.ac and Makefile.am to better build with
      mingw32

0.10.1     2004-07-15 21:03:15
    - fix problems with mpeg files using ffmpeg from cvs or versions
      newer than 0.4.8.
    - remove --with-ffmpegcvs and detect changes by LIBAVCODEC_BUILD

0.10     2004-07-10 18:14:15
    - write eos at the end of the file.
    - fix memleak due to not enough calls of ogg_stream_pageout

0.9     2004-07-04 13:14:15
    - add presets
    - add more comandline options

0.8     2004-06-19 18:47:14