@@ -1,7 +1,16 @@
+svn
+    - support encoding from .ogg input file.
+    - don't change samplerate and audio channel unless we use command line
+      options.
+    - don't change the resolution image, unless we use the presets or the
+      -x or -y options. (old default was to encode to preset preview)
+    - change the audio quality levels that were multiplied by 0.99, now 
+      match the quality settings of oggenc, e.g. -a2 == -q2.
+
 0.15     2005-08-31
     - ti.dropframes_p = 0 so we do not loos half of the frames.
     - also increase keyframe interval for better search support.
-    - this time the windows build als supports ac3 decoding again.
+    - this time the windows build also supports ac3 decoding again.
 
 0.14     2005-08-15
     - add support for v4l input devices
